--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,6 +79,26 @@ body {
   border-radius: 8px;
 }
 
+.game-options {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 20px;
+  width: 100%;
+}
+.game-options label {
+  margin: 10px 0 5px 0;
+  font-size: 1em;
+}
+.game-options input, .game-options select {
+  width: 100%;
+  padding: 8px;
+  font-size: 1em;
+  margin-bottom: 10px;
+  border-radius: 4px;
+  border: 1px solid #2c3e50;
+}
+
 @media (min-width: 769px) {
   #options {
     display: grid;
