--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -101,6 +101,29 @@ body {
     }
 }
 
+// Form Styles
+.game-options {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+    width: 100%; // Ensure form takes full width
+
+    label {
+        margin: 10px 0 5px 0;
+        font-size: 1em;
+    }
+
+    input, select {
+        width: 100%; // Ensure inputs and selects take full width
+        padding: 8px;
+        font-size: 1em;
+        margin-bottom: 10px;
+        border-radius: 4px;
+        border: 1px solid $game-bg-color;
+    }
+}
+
 // Media Queries
 @media (min-width: 769px) {
     #options {
